--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -280,6 +280,7 @@ function! s:defx_my_settings() abort
  \ defx#do_action('cd', getcwd())
   nnoremap <silent><buffer><expr> q
  \ defx#do_action('quit')
+  nnoremap <silent><buffer> sq sq
   nnoremap <silent><buffer><expr> <Space>
  \ defx#do_action('toggle_select') . 'j'
   vnoremap <silent><buffer><expr> <Space>
