--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -99,17 +99,47 @@ nnoremap <silent> <C-u><C-r> :<C-u>Denite -resume<CR>
 " nnoremap <silent> <C-u>- :<C-u>Denite -resume -immediately -select=-1<CR>
 " nnoremap <silent> <C-u><C-d> :<C-u>call denite#start([{'name': 'file/rec', 'args': ['~/dotfiles']}])<CR>
 " nnoremap ml :<C-u>call denite#start([{'name': 'file/rec', 'args': [g:memolist_path]}])<CR>
- nnoremap <silent> s/ :<C-u>Denite -buffer-name=search -auto-highlight
+ nnoremap <silent> s/ :<C-u>Denite -buffer-name=search
         \ line<CR>
  nnoremap <silent> s* :<C-u>DeniteCursorWord -buffer-name=search
-        \ -auto-highlight -mode=normal line<CR>
+        \ -mode=normal line<CR>
  nnoremap <silent> sg :<C-u>Denite -buffer-name=search
-        \ -no-empty -mode=normal grep<CR>
+        \ -no-empty grep<CR>
  nnoremap <silent> sn :<C-u>Denite -buffer-name=search
         \ -resume -mode=normal -refresh<CR>
  nnoremap <silent> s;
         \ :<C-u>Denite command_history command <CR>
  " nnoremap <silent> <C-k> :<C-u>Denite -mode=normal change jump<CR>
+
+ function! s:denite_my_settings() abort
+    nnoremap <silent><buffer><expr> <CR> denite#do_map('do_action')
+    nnoremap <silent><buffer><expr> p denite#do_map('do_action', 'preview')
+    nnoremap <silent><buffer><expr> <esc> denite#do_map('quit')
+    nnoremap <silent><buffer><expr> <C-c> denite#do_map('quit')
+    nnoremap <silent><buffer><expr> i denite#do_map('open_filter_buffer')
+    nnoremap <silent><buffer><expr> <Space> denite#do_map('toggle_select').'j'
+    nnoremap <silent><buffer><expr> <tab> denite#do_map('choose_action')
+endfunction
+
+function! s:denite_filter_my_settings() abort
+  inoremap <silent><buffer><expr> <CR> denite#do_map('do_action')
+  inoremap <silent><buffer><expr> <tab> denite#do_map('choose_action')
+  " imap <silent><buffer> <esc> <Plug>(denite_filter_update)
+  inoremap <silent><buffer><expr> <esc> denite#do_map('quit')
+  imap <silent><buffer> <C-c> <Plug>(denite_filter_quit)
+  inoremap <silent><buffer> <C-g>
+  \ <Esc><C-w>p:call cursor(line('.')+1,0)<CR><C-w>pA
+  inoremap <silent><buffer> <C-t>
+  \ <Esc><C-w>p:call cursor(line('.')-1,0)<CR><C-w>pA
+  call deoplete#custom#buffer_option('auto_complete', v:false)
+endfunction
+
+augroup DENITE
+    autocmd!
+    autocmd FileType denite call s:denite_my_settings()
+    autocmd FileType denite-filter call s:denite_filter_my_settings()
+augroup end
+
 '''
 hook_post_source = '''
  if executable('pt')
@@ -135,6 +165,17 @@ hook_post_source = '''
  call denite#custom#alias('source', 'buffer/project', 'buffer')
  call denite#custom#source('buffer/project', 'matchers',
       \ ['matcher/fruzzy', 'matcher_project_files', 'matcher/ignore_current_buffer'])
+
+let s:denite_options = {
+      \ 'prompt' : '>',
+      \ 'split': 'floating',
+      \ 'start_filter': 1,
+      \ 'auto_resize': 0,
+      \ 'direction': 'botright',
+      "\ 'highlight_filter_background': 'CursorLine',
+      "\ 'highlight_matched_char': 'Type',
+      \ }
+call denite#custom#option('default', s:denite_options)
 '''
 
 [[plugins]]
@@ -299,4 +340,10 @@ function! s:defx_my_settings() abort
  \ ':<C-u>wincmd w<CR>' :
  \ ':<C-u>Defx -buffer-name=temp -split=vertical<CR>'
 endfunction
+'''
+hook_post_source = '''
+call defx#custom#column('filename', {
+     \ 'min_width': 80,
+     \ 'max_width': 300,
+     \ })
 '''
