--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -77,6 +77,7 @@ repo = 'Shougo/neomru.vim'
 
 [[plugins]]
 repo = 'Shougo/denite.nvim'
+rev = 'eaf26778d5e54eb847349ce978c1a59d4cdec12f'
 depends = ['neomru.vim']
 if = 'has("python3")'
 on_cmd = 'Denite'
