--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -99,7 +99,7 @@ nnoremap <silent> <C-u><C-r> :<C-u>Denite -resume<CR>
 " nnoremap <silent> <C-u>- :<C-u>Denite -resume -immediately -select=-1<CR>
 " nnoremap <silent> <C-u><C-d> :<C-u>call denite#start([{'name': 'file/rec', 'args': ['~/dotfiles']}])<CR>
 " nnoremap ml :<C-u>call denite#start([{'name': 'file/rec', 'args': [g:memolist_path]}])<CR>
- nnoremap <silent> s/ :<C-u>Denite -buffer-name=search
+ nnoremap <silent> s/ :<C-u>Denite -buffer-name=search -start_filter
         \ line<CR>
  nnoremap <silent> s* :<C-u>DeniteCursorWord -buffer-name=search
         \ -mode=normal line<CR>
@@ -117,21 +117,22 @@ nnoremap <silent> <C-u><C-r> :<C-u>Denite -resume<CR>
     nnoremap <silent><buffer><expr> <esc> denite#do_map('quit')
     nnoremap <silent><buffer><expr> <C-c> denite#do_map('quit')
     nnoremap <silent><buffer><expr> i denite#do_map('open_filter_buffer')
+    nnoremap <silent><buffer><expr> a denite#do_map('open_filter_buffer')
     nnoremap <silent><buffer><expr> <Space> denite#do_map('toggle_select').'j'
     nnoremap <silent><buffer><expr> <tab> denite#do_map('choose_action')
+    nnoremap <silent><buffer><expr> <C-x> denite#do_map('do_action', 'quick_move')
 endfunction
 
 function! s:denite_filter_my_settings() abort
   inoremap <silent><buffer><expr> <CR> denite#do_map('do_action')
   inoremap <silent><buffer><expr> <tab> denite#do_map('choose_action')
-  " imap <silent><buffer> <esc> <Plug>(denite_filter_update)
   inoremap <silent><buffer><expr> <esc> denite#do_map('quit')
   imap <silent><buffer> <C-c> <Plug>(denite_filter_quit)
   inoremap <silent><buffer> <C-g>
   \ <Esc><C-w>p:call cursor(line('.')+1,0)<CR><C-w>pA
   inoremap <silent><buffer> <C-t>
   \ <Esc><C-w>p:call cursor(line('.')-1,0)<CR><C-w>pA
-  call deoplete#custom#buffer_option('auto_complete', v:false)
+  " call deoplete#custom#buffer_option('auto_complete', v:false)
 endfunction
 
 augroup DENITE
@@ -166,16 +167,19 @@ hook_post_source = '''
  call denite#custom#source('buffer/project', 'matchers',
       \ ['matcher/fruzzy', 'matcher_project_files', 'matcher/ignore_current_buffer'])
 
-let s:denite_options = {
-      \ 'prompt' : '>',
+
+call denite#custom#option('_', {
+      \ 'cached_filter': v:true,
+      \ 'cursor_shape': v:true,
+      \ 'cursor_wrap': v:true,
+      \ 'highlight_filter_background': 'DeniteFilter',
+      \ 'highlight_matched_char': 'Underlined',
+      \ 'matchers': 'matcher/fruzzy',
+      \ 'prompt': '> ',
       \ 'split': 'floating',
-      \ 'start_filter': 1,
-      \ 'auto_resize': 0,
-      \ 'direction': 'botright',
-      "\ 'highlight_filter_background': 'CursorLine',
-      "\ 'highlight_matched_char': 'Type',
-      \ }
-call denite#custom#option('default', s:denite_options)
+      \ 'start_filter': v:true,
+      \ 'statusline': v:false,
+      \ })
 '''
 
 [[plugins]]
