change defx setting

--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -287,6 +287,8 @@ autocmd FileType defx call s:defx_my_settings()
 function! s:defx_my_settings() abort
   " Define mappings
   nnoremap <silent><buffer><expr> <CR>
+ \ defx#async_action('open')
+  nnoremap <silent><buffer><expr> O
  \ defx#async_action('drop')
   nnoremap <silent><buffer><expr> c
  \ defx#do_action('copy')
