add python linter and fixer

--- a/dein.toml
+++ b/dein.toml
@@ -228,3 +228,27 @@ let g:EasyMotion_startofline = 0
 
 [[plugins]]
 repo = 'tpope/vim-repeat'
+
+[[plugins]]
+repo = 'w0rp/ale'
+hook_add = '''
+" Linter
+let g:ale_linters = {
+    \ 'python': ['flake8'],
+    \ }
+
+" Fixer
+let g:ale_fixers = {
+    \ 'python': ['autopep8', 'black', 'isort'],
+    \ }
+
+" Path
+let g:ale_python_flake8_executable = g:python3_host_prog
+let g:ale_python_flake8_options = '-m flake8'
+let g:ale_python_autopep8_executable = g:python3_host_prog
+let g:ale_python_autopep8_options = '-m autopep8'
+let g:ale_python_isort_executable = g:python3_host_prog
+let g:ale_python_isort_options = '-m isort'
+let g:ale_python_black_executable = g:python3_host_prog
+let g:ale_python_black_options = '-m black'
+'''
