add markdown preview

--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -372,3 +372,12 @@ else
 endif
 let g:dein#plugin.build = cmd
 '''
+
+[[plugins]]
+repo = 'iamcco/markdown-preview.nvim'
+on_ft = ['markdown', 'pandoc.markdown', 'rmd']
+build = 'cd app & yarn install'
+hook_add = '''
+let g:mkdp_open_to_the_world = 1
+let g:mkdp_echo_preview_url = 1
+'''
