change for windows

--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -364,4 +364,11 @@ call defx#custom#column('filename', {
 repo = 'tbodt/deoplete-tabnine'
 depends = ['deoplete.nvim']
 on_event = ['InsertEnter']
-build = './install.sh'
+hook_post_update = '''
+if has('win32') || has('win64')
+  let cmd = 'powershell.exe .\install.ps1'
+else
+  let cmd = './install.sh'
+endif
+let g:dein#plugin.build = cmd
+'''
