--- a/dein.toml
+++ b/dein.toml
@@ -170,7 +170,7 @@ repo = 'equalsraf/neovim-gui-shim'
 [[plugins]]
 repo = 'vim-pandoc/vim-pandoc'
 hook_add = '''
-" let g:pandoc#filetypes#pandoc_markdown = 0
+let g:pandoc#filetypes#pandoc_markdown = 0
 let g:pandoc#modules#disabled = ["folding", "spell"]
 '''
 
