--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -78,34 +78,44 @@ nnoremap <silent> su :<C-u>Denite file_mru<CR>
 nnoremap <silent> <C-u><C-y> :<C-u>Denite neoyank<CR>
 nnoremap <silent> <C-u><C-r> :<C-u>Denite -resume<CR>
 nnoremap <silent> sy :<C-u>Denite neoyank<CR>
-nnoremap <silent> sr :<C-u>Denite -resume<CR>
-" nnoremap <silent> <C-u>; :<C-u>Denite -resume -immediately -select=+1<CR>
-" nnoremap <silent> <C-u>- :<C-u>Denite -resume -immediately -select=-1<CR>
-" nnoremap <silent> <C-u><C-d> :<C-u>call denite#start([{'name': 'file/rec', 'args': ['~/dotfiles']}])<CR>
-" nnoremap ml :<C-u>call denite#start([{'name': 'file/rec', 'args': [g:memolist_path]}])<CR>
- nnoremap <silent> s/ :<C-u>Denite -buffer-name=search -auto-action='highlight'
-        \ line<CR>
- nnoremap <silent> s* :<C-u>DeniteCursorWord -buffer-name=search -auto-action='highlight'
-        \  -no-start-filter line<CR>
- nnoremap <silent> sg :<C-u>Denite -buffer-name=search -auto-action='preview' -no-start-filter
-        \ -no-empty grep<CR>
- nnoremap <silent> sn :<C-u>Denite -buffer-name=search -auto-action='highlight' -no-start-filter
-        \ -resume -refresh -cursor-pos=+1 <CR>
- nnoremap <silent> s;
-        \ :<C-u>Denite command_history command <CR>
- nnoremap <silent> so
-        \ :<C-u>Denite jump change <CR>
+nnoremap <silent> sg :<C-u>Denite -buffer-name=search -auto-action='preview' -no-start-filter
+       \ -no-empty grep<CR>
+nnoremap <silent> sn :<C-u>Denite -buffer-name=search -auto-action='highlight' -no-start-filter
+       \ -resume -refresh -cursor-pos=+1 <CR>
+nnoremap <silent> s;
+       \ :<C-u>Denite command_history command <CR>
+nnoremap <silent> so
+       \ :<C-u>Denite jump change <CR>
 
- function! s:denite_my_settings() abort
-    nnoremap <silent><buffer><expr> <CR> denite#do_map('do_action')
-    nnoremap <silent><buffer><expr> p denite#do_map('do_action', 'preview')
-    nnoremap <silent><buffer><expr> <esc> denite#do_map('quit')
-    nnoremap <silent><buffer><expr> <C-c> denite#do_map('quit')
-    nnoremap <silent><buffer><expr> i denite#do_map('open_filter_buffer')
-    nnoremap <silent><buffer><expr> a denite#do_map('open_filter_buffer')
-    nnoremap <silent><buffer><expr> <Space> denite#do_map('toggle_select').'j'
-    nnoremap <silent><buffer><expr> <tab> denite#do_map('choose_action')
-    nnoremap <silent><buffer><expr> <C-x> denite#do_map('do_action', 'quick_move')
+nnoremap <silent><expr> s/ wordcount().chars > 30000 ?
+ \ ":\<C-u>Denite -buffer-name=search -start-filter -auto-action='highlight'
+ \  -search line/external\<CR>" :
+ \ ":\<C-u>Denite -buffer-name=search -start-filter -auto-action='highlight'
+ \  -search line:forward\<CR>"
+nnoremap <silent><expr> * wordcount().chars > 30000 ?
+ \ ":\<C-u>DeniteCursorWord -buffer-name=search -no-start-filter -auto-action='highlight' -search line/external\<CR>" :
+ \ ":\<C-u>DeniteCursorWord -buffer-name=search -no-start-filter -auto-action='highlight' -search line:forward\<CR>"
+xnoremap <silent> *
+ \ "qy:Denite -input=`@q` -buffer-name=search -no-start-filter -auto-action='highlight' -search line:forward<CR>"
+
+nnoremap <silent> ;r
+     \ :<C-u>Denite -buffer-name=register
+     \ register neoyank<CR>
+xnoremap <silent> ;r
+     \ :<C-u>Denite -default-action=replace -buffer-name=register
+     \ register neoyank<CR>
+
+function! s:denite_my_settings() abort
+   nnoremap <silent><buffer><expr> <CR> denite#do_map('do_action')
+   nnoremap <silent><buffer><expr> p denite#do_map('do_action', 'preview')
+   nnoremap <silent><buffer><expr> <esc> denite#do_map('quit')
+   nnoremap <silent><buffer><expr> <C-c> denite#do_map('quit')
+   nnoremap <silent><buffer><expr> q denite#do_map('quit')
+   nnoremap <silent><buffer><expr> i denite#do_map('open_filter_buffer')
+   nnoremap <silent><buffer><expr> a denite#do_map('open_filter_buffer')
+   nnoremap <silent><buffer><expr> <Space> denite#do_map('toggle_select').'j'
+   nnoremap <silent><buffer><expr> <tab> denite#do_map('choose_action')
+   nnoremap <silent><buffer><expr> <C-x> denite#do_map('do_action', 'quick_move')
 endfunction
 
 function! s:denite_filter_my_settings() abort
@@ -120,6 +130,7 @@ function! s:denite_filter_my_settings() abort
   inoremap <silent><buffer> <C-t>
   \ <Esc><C-w>p:call cursor(line('.')-1,0)<CR>:call denite#call_map('open_filter_buffer')<CR>
   " call deoplete#custom#buffer_option('auto_complete', v:false)
+  nnoremap <silent><buffer><expr> <C-l> denite#do_map('redraw')
 endfunction
 
 augroup DENITE
@@ -268,6 +279,8 @@ repo = 'Shougo/defx.nvim'
 hook_add = '''
 nnoremap <silent>   [Space]f
 \ :<C-u>Defx -listed -resume -winwidth=200 -buffer-name=tab`tabpagenr()`<CR>
+nnoremap <silent>   [Space]t
+\ :<C-u>Defx -split=vertical -direction=topleft -resume -columns=mark:indent:icons:filename -winwidth=35 -buffer-name=tab`tabpagenr()`<CR>
 
 autocmd FileType defx call s:defx_my_settings()
 function! s:defx_my_settings() abort
@@ -371,3 +384,60 @@ hook_add = '''
 let g:mkdp_open_to_the_world = 1
 let g:mkdp_echo_preview_url = 1
 '''
+
+[[plugins]]
+repo = 'lambdalisue/vim-findent'
+
+[[plugins]]
+repo = 'ncm2/float-preview.nvim'
+on_source = 'deoplete.nvim'
+if = 'has("nvim")'
+hook_source = '''
+  let g:float_preview#docked = 0
+  let g:float_preview#max_width = 60
+  let g:float_preview#max_height = 20
+'''
+
+[[plugins]]
+repo = 'tyru/columnskip.vim'
+on_map = {n = '<Plug>'}
+hook_add = '''
+  nmap gj <Plug>(columnskip-j)
+  nmap gk <Plug>(columnskip-k)
+  omap gj <Plug>(columnskip-j)
+  xmap gk <Plug>(columnskip-k)
+  xmap gj <Plug>(columnskip-j)
+  omap gk <Plug>(columnskip-k)
+'''
+
+[[plugins]]
+repo = 'Shougo/neosnippet.vim'
+depends = ['neosnippet-snippets', 'context_filetype.vim']
+on_event = 'InsertCharPre'
+on_ft = 'snippet'
+hook_source = '''
+  " imap <silent>L     <Plug>(neosnippet_jump_or_expand)
+  " smap <silent>L     <Plug>(neosnippet_jump_or_expand)
+  " xmap <silent>L     <Plug>(neosnippet_expand_target)
+  let g:neosnippet#enable_snipmate_compatibility = 1
+  let g:neosnippet#enable_completed_snippet = 1
+  let g:neosnippet#expand_word_boundary = 1
+  " let g:neosnippet#snippets_directory = '~/.vim/snippets'
+'''
+
+# [[plugins]]
+# repo = 'Shougo/deoppet.nvim'
+# if = 'has("python3")'
+# depends = ['neosnippet-snippets', 'context_filetype.vim']
+# on_event = 'InsertCharPre'
+# hook_source = '''
+#   " Test<Plug>
+#   imap <C-k>  <Plug>(deoppet_expand)
+#   imap <C-f>  <Plug>(deoppet_jump_forward)
+#   imap <C-b>  <Plug>(deoppet_jump_backward)
+#   call deoppet#custom#option('snippets_dirs',
+# \ globpath(&runtimepath, 'neosnippets', 1, 1))
+# '''
+
+[[plugins]]
+repo = 'Shougo/neosnippet-snippets'
