--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -410,20 +410,20 @@ hook_add = '''
   omap gk <Plug>(columnskip-k)
 '''
 
-[[plugins]]
-repo = 'Shougo/neosnippet.vim'
-depends = ['neosnippet-snippets', 'context_filetype.vim']
-on_event = 'InsertCharPre'
-on_ft = 'snippet'
-hook_source = '''
-  " imap <silent>L     <Plug>(neosnippet_jump_or_expand)
-  " smap <silent>L     <Plug>(neosnippet_jump_or_expand)
-  " xmap <silent>L     <Plug>(neosnippet_expand_target)
-  let g:neosnippet#enable_snipmate_compatibility = 1
-  let g:neosnippet#enable_completed_snippet = 1
-  let g:neosnippet#expand_word_boundary = 1
-  " let g:neosnippet#snippets_directory = '~/.vim/snippets'
-'''
+# [[plugins]]
+# repo = 'Shougo/neosnippet.vim'
+# depends = ['neosnippet-snippets', 'context_filetype.vim']
+# on_event = 'InsertCharPre'
+# on_ft = 'snippet'
+# hook_source = '''
+#   imap <silent><C-k>  <Plug>(neosnippet_jump_or_expand)
+#   smap <silent><C-k>  <Plug>(neosnippet_jump_or_expand)
+#   xmap <silent><C-k>  <Plug>(neosnippet_expand_target)
+#   let g:neosnippet#enable_snipmate_compatibility = 1
+#   let g:neosnippet#enable_completed_snippet = 1
+#   let g:neosnippet#expand_word_boundary = 1
+#   " let g:neosnippet#snippets_directory = '~/.vim/snippets'
+# '''
 
 # [[plugins]]
 # repo = 'Shougo/deoppet.nvim'
@@ -439,5 +439,5 @@ hook_source = '''
 # \ globpath(&runtimepath, 'neosnippets', 1, 1))
 # '''
 
-[[plugins]]
-repo = 'Shougo/neosnippet-snippets'
+# [[plugins]]
+# repo = 'Shougo/neosnippet-snippets'
