--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -305,7 +305,9 @@ function! s:defx_my_settings() abort
   nnoremap <silent><buffer><expr> P
  \ defx#do_action('open', 'pedit')
   nnoremap <silent><buffer><expr> o
- \ defx#do_action('open_or_close_tree')
+ \ defx#is_directory() ?
+ \ defx#do_action('open_or_close_tree') :
+ \ defx#async_action('drop')
   nnoremap <silent><buffer><expr> K
  \ defx#do_action('new_directory')
   nnoremap <silent><buffer><expr> N
