--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -211,12 +211,10 @@ hook_add = '''
 '''
 hook_source = '''
   let g:deol#prompt_pattern = '\w*%'
-  " autocmd FileType deol call s:on_deol()
-  " function! s:on_deol() abort
-  "   nnoremap <buffer><silent> [Space]gs :<C-u>call deol#send('git status')<CR>
-  "   nnoremap <buffer><silent> [Space]gc :<C-u>call deol#send('git commit')<CR>
-  "   nnoremap <buffer><silent> [Space]gA :<C-u>call deol#send('git commit --amend')<CR>
-  " endfunction
+  autocmd FileType deol call s:on_deol()
+  function! s:on_deol() abort
+    nnoremap <silent><buffer> sq sq
+  endfunction
 '''
 
 [[plugins]]
