update vim-rooter setting

--- a/dein.toml
+++ b/dein.toml
@@ -162,7 +162,7 @@ repo = "kana/vim-tabpagecd"
 [[plugins]]
 repo = "airblade/vim-rooter"
 hook_add = '''
-let g:rooter_use_lcd = 1
+let g:rooter_cd_cmd = 'lcd'
 '''
 
 [[plugins]]
