--- a/dein.toml
+++ b/dein.toml
@@ -269,6 +269,20 @@ map P <Plug>(miniyank-autoPut)
 '''
 # if = "IsWindows() || IsMac()"
 
-
 [[plugins]]
 repo = 'editorconfig/editorconfig-vim'
+
+[[plugins]]
+repo = 'nvim-treesitter/nvim-treesitter'
+hook_add = '''
+lua <<EOF
+require'nvim-treesitter.configs'.setup {
+  highlight = {
+    enable = true,
+    disable = {
+      'toml',
+    }
+  }
+}
+EOF
+'''
