--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -2,57 +2,57 @@
 # repo = 'Shougo/vimproc.vim'
 # build = 'make'
 
-[[plugins]]
-repo = 'Shougo/deoplete.nvim'
-if = 'has("python3")'
-on_event = 'InsertEnter'
-hook_add = '''
-let g:deoplete#enable_at_startup = 1
+# [[plugins]]
+# repo = 'Shougo/deoplete.nvim'
+# if = 'has("python3")'
+# on_event = 'InsertEnter'
+# hook_add = '''
+# let g:deoplete#enable_at_startup = 1
+#
+# " <TAB>: completion.
+# inoremap <silent><expr> <TAB>
+#      \ pumvisible() ? "\<C-n>" :
+#      \ <SID>check_back_space() ? "\<TAB>" :
+#      \ deoplete#manual_complete()
+# function! s:check_back_space() abort "{{{
+#   let col = col('.') - 1
+#   return !col || getline('.')[col - 1]  =~ '\s'
+# endfunction"}}}
+#
+# " <S-TAB>: completion back.
+# inoremap <expr><S-TAB>  pumvisible() ? "\<C-p>" : "\<C-h>"
+#
+# " <CR>: close popup and save indent.
+# inoremap <expr><CR>  pumvisible() ? deoplete#close_popup() : "<CR>"
+#
+# " let g:deoplete#sources#jedi#worker_threads = 2
+# '''
+#
+# hook_source = '''
+# call deoplete#custom#option('camel_case', v:true)
+# call deoplete#custom#option('refresh_always', v:true)
+# call deoplete#custom#option('auto_complete_delay', 0)
+# call deoplete#custom#option('async_timeout', 100)
+# '''
+#
+# [[plugins]]
+# repo = 'Shougo/deoplete-clangx'
+# on_ft = ['c', 'cpp']
 
-" <TAB>: completion.
-inoremap <silent><expr> <TAB>
-      \ pumvisible() ? "\<C-n>" :
-      \ <SID>check_back_space() ? "\<TAB>" :
-      \ deoplete#manual_complete()
-function! s:check_back_space() abort "{{{
-  let col = col('.') - 1
-  return !col || getline('.')[col - 1]  =~ '\s'
-endfunction"}}}
-
-" <S-TAB>: completion back.
-inoremap <expr><S-TAB>  pumvisible() ? "\<C-p>" : "\<C-h>"
-
-" <CR>: close popup and save indent.
-inoremap <expr><CR>  pumvisible() ? deoplete#close_popup() : "<CR>"
-
-" let g:deoplete#sources#jedi#worker_threads = 2
-'''
-
-hook_source = '''
-call deoplete#custom#option('camel_case', v:true)
-call deoplete#custom#option('refresh_always', v:true)
-call deoplete#custom#option('auto_complete_delay', 0)
-call deoplete#custom#option('async_timeout', 100)
-'''
-
-[[plugins]]
-repo = 'Shougo/deoplete-clangx'
-on_ft = ['c', 'cpp']
-
-[[plugins]]
-repo = 'davidhalter/jedi-vim'
-on_ft = 'python'
-hook_add = '''
-let g:jedi#completions_enabled = 0
-'''
-
-[[plugins]]
-repo = 'zchee/deoplete-jedi'
-on_event = 'InsertEnter'
-on_ft = 'python'
-hook_add = '''
-let g:deoplete#sources#jedi#show_docstring = 0
-'''
+# [[plugins]]
+# repo = 'davidhalter/jedi-vim'
+# on_ft = 'python'
+# hook_add = '''
+# let g:jedi#completions_enabled = 0
+# '''
+# 
+# [[plugins]]
+# repo = 'zchee/deoplete-jedi'
+# on_event = 'InsertEnter'
+# on_ft = 'python'
+# hook_add = '''
+# let g:deoplete#sources#jedi#show_docstring = 0
+# '''
 
 [[plugins]]
 repo = 'Shougo/neomru.vim'
@@ -205,10 +205,11 @@ hook_add = '''
 [[plugins]]
 repo = 'Shougo/deol.nvim'
 on_cmd = 'Deol'
-on_source = 'denite.nvim'
+depends = ['denite.nvim', 'ddc.vim']
+on_source = ['defx.nvim', 'denite.nvim']
 hook_add = '''
   nnoremap <silent> [Window]N :<C-u>call deol#new({'command': 'bash'})<CR>
-  nnoremap <silent> [Space]s :<C-u>Deol bash<CR>
+  nnoremap <silent> [Space]s :<C-u>Deol bash <CR>
   nnoremap <silent> [Window]D  :<C-u>call deol#kill_editor()<CR>
 '''
 hook_source = '''
@@ -228,9 +229,6 @@ on_source = ['denite.nvim']
 # [[plugins]]
 # repo = "huawenyu/neogdb.vim"
 # on_ft = ['c', 'cpp']
-
-[[plugins]]
-repo = 'equalsraf/neovim-gui-shim'
 
 [[plugins]]
 repo = 'plasticboy/vim-markdown'
@@ -392,15 +390,15 @@ let g:mkdp_echo_preview_url = 1
 [[plugins]]
 repo = 'lambdalisue/vim-findent'
 
-[[plugins]]
-repo = 'ncm2/float-preview.nvim'
-on_source = 'deoplete.nvim'
-if = 'has("nvim")'
-hook_source = '''
-  let g:float_preview#docked = 0
-  let g:float_preview#max_width = 60
-  let g:float_preview#max_height = 20
-'''
+# [[plugins]]
+# repo = 'ncm2/float-preview.nvim'
+# on_source = 'deoplete.nvim'
+# if = 'has("nvim")'
+# hook_source = '''
+#   let g:float_preview#docked = 0
+#   let g:float_preview#max_width = 60
+#   let g:float_preview#max_height = 20
+# '''
 
 [[plugins]]
 repo = 'tyru/columnskip.vim'
@@ -445,3 +443,195 @@ hook_add = '''
 
 # [[plugins]]
 # repo = 'Shougo/neosnippet-snippets'
+
+[[plugins]]
+repo = 'vim-denops/denops.vim'
+
+[[plugins]]
+repo = 'Shougo/ddc.vim'
+depends = ['context_filetype.vim', 'denops.vim', 'pum.vim']
+on_event = 'InsertEnter'
+hook_source = '''
+
+  call ddc#custom#patch_global(
+    \ 'sources', ['around', 'file'],
+    \ )
+
+  call ddc#custom#patch_global('sourceOptions', {
+      \ '_': {
+      \   'ignoreCase': v:true,
+      \   'matchers': ['matcher_head'],
+      \   'sorters': ['sorter_rank'],
+      \   'converters': ['converter_remove_overlap'],
+      \ },
+      \ 'around': {
+      \   'mark': 'A',
+      \   'matchers': ['matcher_head', 'matcher_length'],
+      \ },
+      \ 'cmdline': {
+      \   'mark': 'cmdline',
+      \   'forceCompletionPattern': '\S/\S*',
+      \ },
+      \ 'nextword': {
+      \   'mark': 'nextword',
+      \   'minAutoCompleteLength': 3,
+      \   'isVolatile': v:true,
+      \ },
+      \ 'nvim-lsp': {
+      \   'mark': 'lsp',
+      \   'forceCompletionPattern': '\.\w*|:\w*|->\w*'
+      \ },
+      \ 'file': {
+      \   'mark': 'F',
+      \   'isVolatile': v:true,
+      \   'minAutoCompleteLength': 1000,
+      \   'forceCompletionPattern': '\S/\S*'
+      \ },
+      \ 'cmdline-history': {
+      \   'mark': 'history',
+      \   'sorters': [],
+      \ },
+      \ 'shell-history': {'mark': 'shell'},
+      \ })
+
+  call ddc#custom#patch_filetype(['python'],
+    \ 'sources',
+    \ ['nvim-lsp', 'around']
+    \ )
+
+  call ddc#custom#patch_filetype(['deol'], {
+    \ 'keywordPattern': '[0-9a-zA-Z_./-]',
+    \ 'sources': ['shell-history', 'around'],
+    \ })
+
+  " Use pum.vim
+  call ddc#custom#patch_global('autoCompleteEvents', [
+      \ 'InsertEnter', 'TextChangedI', 'TextChangedP',
+      \ 'CmdlineEnter', 'CmdlineChanged',
+      \ ])
+  call ddc#custom#patch_global('completionMenu', 'pum.vim')
+
+  call ddc#enable()
+'''
+hook_add = '''
+  " nnoremap :       <Cmd>call CommandlinePre(':')<CR>:
+  " nnoremap ?       <Cmd>call CommandlinePre('/')<CR>?
+'''
+
+[[plugins]]
+repo = 'Shougo/pum.vim'
+
+[[plugins]]
+repo = 'Shougo/ddc-around'
+on_source = 'ddc.vim'
+
+[[plugins]]
+repo = 'Shougo/ddc-nextword'
+on_source = 'ddc.vim'
+
+[[plugins]]
+repo = 'Shougo/ddc-cmdline'
+on_source = 'ddc.vim'
+
+[[plugins]]
+repo = 'Shougo/ddc-line'
+on_source = 'ddc.vim'
+
+[[plugins]]
+repo = 'Shougo/ddc-nvim-lsp'
+on_source = 'nvim-lspconfig'
+
+[[plugins]]
+repo = 'Shougo/ddc-matcher_head'
+on_source = 'ddc.vim'
+
+[[plugins]]
+repo = 'Shougo/ddc-matcher_length'
+on_source = 'ddc.vim'
+
+[[plugins]]
+repo = 'Shougo/ddc-sorter_rank'
+on_source = 'ddc.vim'
+
+[[plugins]]
+repo = 'Shougo/ddc-cmdline-history'
+on_source = 'ddc.vim'
+
+[[plugins]]
+repo = 'LumaKernel/ddc-file'
+on_source = 'ddc.vim'
+
+[[plugins]]
+repo = 'Shougo/ddc-omni'
+
+[[plugins]]
+repo = 'nathom/filetype.nvim'
+if = 'has("nvim")'
+hook_source = '''
+  " Do not source the default filetype.vim
+  let g:did_load_filetypes = 1
+'''
+
+[[plugins]]
+repo = 'Shougo/neco-vim'
+on_ft = ['vim', 'toml', 'markdown']
+depends = 'ddc.vim'
+hook_source = '''
+  call ddc#custom#patch_filetype(
+          \ ['vim'], 'sources', ['necovim', 'around', 'file']
+          \ )
+'''
+
+[[plugins]]
+repo = 'Shougo/ddc-converter_remove_overlap'
+on_source = 'ddc.vim'
+
+[[plugins]]
+repo = 'neovim/nvim-lspconfig'
+on_ft = ['typescript', 'python']
+if = 'has("nvim")'
+depends = 'ddc.vim'
+hook_source = '''
+ lua << EOF
+  local nvim_lsp = require('lspconfig')
+
+  local on_attach = function (client, bufnr)
+      local function buf_set_keymap(...) vim.api.nvim_buf_set_keymap(bufnr, ...) end
+      local function buf_set_option(...) vim.api.nvim_buf_set_option(bufnr, ...) end
+
+      local opts = { noremap=true, silent=true }
+      buf_set_keymap('n', 'gd', '<Cmd>lua vim.lsp.buf.definition()<CR>', opts)
+      buf_set_keymap('n', 'gD', '<cmd>lua vim.lsp.buf.declaration()<CR>', opts)
+      buf_set_keymap('n', 'gi', '<cmd>lua vim.lsp.buf.implementation()<CR>', opts)
+      buf_set_keymap('n', 'K', '<Cmd>lua vim.lsp.buf.hover()<CR>', opts)
+      buf_set_keymap('n', 'gi', '<cmd>lua vim.lsp.buf.implementation()<CR>', opts)
+      buf_set_keymap('n', 'gs', '<cmd>lua vim.lsp.buf.signature_help()<CR>', opts)
+      buf_set_keymap('n', '<C-k>', '<cmd>lua vim.lsp.buf.signature_help()<CR>', opts)
+      buf_set_keymap('n', 'gr', '<cmd>lua vim.lsp.buf.references()<CR>', opts)
+      buf_set_keymap('n', 'gx', '<cmd>lua vim.lsp.diagnostic.show_line_diagnostics()<CR>', opts)
+      buf_set_keymap('n', '<space>wa', '<cmd>lua vim.lsp.buf.add_workspace_folder()<CR>', opts)
+      buf_set_keymap('n', '<space>wr', '<cmd>lua vim.lsp.buf.remove_workspace_folder()<CR>', opts)
+      buf_set_keymap('n', '<space>wl', '<cmd>lua print(vim.inspect(vim.lsp.buf.list_workspace_folders()))<CR>', opts)
+      buf_set_keymap('n', '<space>D', '<cmd>lua vim.lsp.buf.type_definition()<CR>', opts)
+      buf_set_keymap('n', '<space>rn', '<cmd>lua vim.lsp.buf.rename()<CR>', opts)
+      buf_set_keymap('n', '<space>ca', '<cmd>lua vim.lsp.buf.code_action()<CR>', opts)
+      buf_set_keymap('n', '<space>e', '<cmd>lua vim.diagnostic.open_float()<CR>', opts)
+      buf_set_keymap('n', '[d', '<cmd>lua vim.diagnostic.goto_prev()<CR>', opts)
+      buf_set_keymap('n', ']d', '<cmd>lua vim.diagnostic.goto_next()<CR>', opts)
+      buf_set_keymap('n', '<space>q', '<cmd>lua vim.diagnostic.setloclist()<CR>', opts)
+      buf_set_keymap('n', '<space>f', '<cmd>lua vim.lsp.buf.formatting()<CR>', opts)
+  end
+
+  local lsp_installer = require("nvim-lsp-installer")
+  lsp_installer.on_server_ready(function(server)
+    local opts = {}
+    opts.on_attach = on_attach
+    server:setup(opts)
+    vim.cmd [[ do User LspAttachBuffers ]]
+  end)
+EOF
+'''
+
+[[plugins]]
+repo ='williamboman/nvim-lsp-installer'
+on_source = 'nvim-lspconfig'
