--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -474,7 +474,7 @@ hook_source = '''
       \ },
       \ 'nextword': {
       \   'mark': 'nextword',
-      \   'minAutoCompleteLength': 3,
+      \   'minAutoCompleteLength': 2,
       \   'isVolatile': v:true,
       \ },
       \ 'nvim-lsp': {
@@ -592,7 +592,7 @@ on_ft = ['typescript', 'python']
 if = 'has("nvim")'
 depends = 'ddc.vim'
 hook_source = '''
- lua << EOF
+  lua << EOF
   local nvim_lsp = require('lspconfig')
 
   local on_attach = function (client, bufnr)
@@ -619,7 +619,7 @@ hook_source = '''
       buf_set_keymap('n', '[d', '<cmd>lua vim.diagnostic.goto_prev()<CR>', opts)
       buf_set_keymap('n', ']d', '<cmd>lua vim.diagnostic.goto_next()<CR>', opts)
       buf_set_keymap('n', '<space>q', '<cmd>lua vim.diagnostic.setloclist()<CR>', opts)
-      buf_set_keymap('n', '<space>f', '<cmd>lua vim.lsp.buf.formatting()<CR>', opts)
+      buf_set_keymap('n', '[Window]f', '<cmd>lua vim.lsp.buf.formatting()<CR>', opts)
   end
 
   local lsp_installer = require("nvim-lsp-installer")
